--- a/docs/visual-basic/misc/bc32111.md
+++ b/docs/visual-basic/misc/bc32111.md
@@ -7,31 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32111
 ms.assetid: b03b5840-5318-4844-b2da-1bca4c28d097
-ms.openlocfilehash: 3f4459b49c5c8242ac600b86d23567e27dd4fbbf
-ms.sourcegitcommit: a885cc8c3e444ca6471348893d5373c6e9e49a47
-ms.translationtype: HT
+ms.openlocfilehash: 8ee2e32e92a01b22565b69441646f6a2b65d9b46
+ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
+ms.translationtype: MT
 ms.contentlocale: ko-KR
 ms.lasthandoff: 09/07/2018
-ms.locfileid: "44063500"
+ms.locfileid: "44139230"
 ---
-# <a name="indirect-constraint-39ltconstraint1gt39-obtained-from-the-type-parameter-constraint-39lttypeparameter1gt39-conflicts-with-the-constraint-39ltconstraint2gt39"></a><span data-ttu-id="e0cb1-102">간접 제약 조건 &#39; &lt;constraint1&gt; &#39; 형식 매개 변수 제약 조건에서 가져온 &#39; &lt;typeparameter1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="e0cb1-102">Indirect constraint &#39;&lt;constraint1&gt;&#39; obtained from the type parameter constraint &#39;&lt;typeparameter1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39;</span></span>
-<span data-ttu-id="e0cb1-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="e0cb1-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
+# <a name="indirect-constraint-39ltconstraint1gt39-obtained-from-the-type-parameter-constraint-39lttypeparameter1gt39-conflicts-with-the-constraint-39ltconstraint2gt39"></a><span data-ttu-id="f1977-102">간접 제약 조건 &#39; &lt;constraint1&gt; &#39; 형식 매개 변수 제약 조건에서 가져온 &#39; &lt;typeparameter1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="f1977-102">Indirect constraint &#39;&lt;constraint1&gt;&#39; obtained from the type parameter constraint &#39;&lt;typeparameter1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39;</span></span>
+<span data-ttu-id="f1977-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="f1977-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
   
- <span data-ttu-id="e0cb1-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="e0cb1-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="f1977-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f1977-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t1 As {t2, Class}, t2 As Structure)`  
   
- <span data-ttu-id="e0cb1-105">간접 제약 조건 `Structure` 및 직접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="e0cb1-105">The indirect constraint `Structure` and the direct constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="f1977-105">간접 제약 조건 `Structure` 및 직접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="f1977-105">The indirect constraint `Structure` and the direct constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="e0cb1-106">**오류 ID:** BC32111</span><span class="sxs-lookup"><span data-stu-id="e0cb1-106">**Error ID:** BC32111</span></span>  
+ <span data-ttu-id="f1977-106">**오류 ID:** BC32111</span><span class="sxs-lookup"><span data-stu-id="f1977-106">**Error ID:** BC32111</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e0cb1-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e0cb1-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f1977-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f1977-107">To correct this error</span></span>  
   
--   <span data-ttu-id="e0cb1-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="e0cb1-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
+-   <span data-ttu-id="f1977-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="f1977-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e0cb1-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="e0cb1-109">See Also</span></span>  
- [<span data-ttu-id="e0cb1-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="e0cb1-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="e0cb1-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="e0cb1-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
- [<span data-ttu-id="e0cb1-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="e0cb1-112">Structure (Visual Basic)</span></span>](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
- [<span data-ttu-id="e0cb1-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="e0cb1-113">Class (Visual Basic)</span></span>](https://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
- [<span data-ttu-id="e0cb1-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="e0cb1-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+## <a name="see-also"></a><span data-ttu-id="f1977-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="f1977-109">See also</span></span>
+
+- [<span data-ttu-id="f1977-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="f1977-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [<span data-ttu-id="f1977-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="f1977-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+- [<span data-ttu-id="f1977-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f1977-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
+- [<span data-ttu-id="f1977-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f1977-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
+- [<span data-ttu-id="f1977-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="f1977-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
