--- a/docs/visual-basic/misc/bc42001.md
+++ b/docs/visual-basic/misc/bc42001.md
@@ -8,26 +8,26 @@ helpviewer_keywords:
 - BC42001
 ms.assetid: 31e7c383-894e-416c-b834-3688cc340ccf
 ms.openlocfilehash: 5f62c99faafa06ce0fbd41affa22d4c241751b91
-ms.sourcegitcommit: 3c1c3ba79895335ff3737934e39372555ca7d6d0
-ms.translationtype: MT
+ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
+ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43799790"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44078769"
 ---
-# <a name="39classinitialize39-event-is-no-longer-supported"></a><span data-ttu-id="ffa80-102">&#39;Class_Initialize&#39; 이벤트는 더 이상 지원</span><span class="sxs-lookup"><span data-stu-id="ffa80-102">&#39;Class_Initialize&#39; event is no longer supported</span></span>
-<span data-ttu-id="ffa80-103">'Class_Initialize' 이벤트는 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ffa80-103">'Class_Initialize' event is no longer supported.</span></span> <span data-ttu-id="ffa80-104">클래스를 초기화하려면 'Sub New'를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="ffa80-104">Use 'Sub New' to initialize a class.</span></span>  
+# <a name="39classinitialize39-event-is-no-longer-supported"></a><span data-ttu-id="adc85-102">&#39;Class_Initialize&#39; 이벤트는 더 이상 지원</span><span class="sxs-lookup"><span data-stu-id="adc85-102">&#39;Class_Initialize&#39; event is no longer supported</span></span>
+<span data-ttu-id="adc85-103">'Class_Initialize' 이벤트는 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="adc85-103">'Class_Initialize' event is no longer supported.</span></span> <span data-ttu-id="adc85-104">클래스를 초기화하려면 'Sub New'를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="adc85-104">Use 'Sub New' to initialize a class.</span></span>  
   
- <span data-ttu-id="ffa80-105">`Class_Initialize` 이전 버전의 Visual Basic의 이벤트는 클래스 생성자에 의해 대체 됩니다.</span><span class="sxs-lookup"><span data-stu-id="ffa80-105">The `Class_Initialize` event of previous versions of Visual Basic is replaced by class constructors.</span></span>  
+ <span data-ttu-id="adc85-105">`Class_Initialize` 이전 버전의 Visual Basic의 이벤트는 클래스 생성자에 의해 대체 됩니다.</span><span class="sxs-lookup"><span data-stu-id="adc85-105">The `Class_Initialize` event of previous versions of Visual Basic is replaced by class constructors.</span></span>  
   
- <span data-ttu-id="ffa80-106">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="ffa80-106">By default, this message is a warning.</span></span> <span data-ttu-id="ffa80-107">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="ffa80-107">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="adc85-106">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="adc85-106">By default, this message is a warning.</span></span> <span data-ttu-id="adc85-107">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="adc85-107">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="ffa80-108">**오류 ID:** BC42001</span><span class="sxs-lookup"><span data-stu-id="ffa80-108">**Error ID:** BC42001</span></span>  
+ <span data-ttu-id="adc85-108">**오류 ID:** BC42001</span><span class="sxs-lookup"><span data-stu-id="adc85-108">**Error ID:** BC42001</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ffa80-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ffa80-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="adc85-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="adc85-109">To correct this error</span></span>  
   
--   <span data-ttu-id="ffa80-110">하나 이상의 `Sub` 프로시저 이름을 `New` 로 선언하여 클래스를 초기화합니다.</span><span class="sxs-lookup"><span data-stu-id="ffa80-110">Declare one or more `Sub` procedures named `New` to initialize a class.</span></span> <span data-ttu-id="ffa80-111">클래스 인스턴스를 새로 만들 때`Sub New` 가 호출됩니다.</span><span class="sxs-lookup"><span data-stu-id="ffa80-111">`Sub New` is called when a class instance is newly created.</span></span>  
+-   <span data-ttu-id="adc85-110">하나 이상의 `Sub` 프로시저 이름을 `New` 로 선언하여 클래스를 초기화합니다.</span><span class="sxs-lookup"><span data-stu-id="adc85-110">Declare one or more `Sub` procedures named `New` to initialize a class.</span></span> <span data-ttu-id="adc85-111">클래스 인스턴스를 새로 만들 때`Sub New` 가 호출됩니다.</span><span class="sxs-lookup"><span data-stu-id="adc85-111">`Sub New` is called when a class instance is newly created.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ffa80-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ffa80-112">See Also</span></span>  
- [<span data-ttu-id="ffa80-113">Visual Basic의 Class_Initialize 변경</span><span class="sxs-lookup"><span data-stu-id="ffa80-113">Class_Initialize Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/2cd023cf-2869-4836-b08d-43822294beeb)  
- [<span data-ttu-id="ffa80-114">Visual Basic 6.0 사용자를 위한 클래스</span><span class="sxs-lookup"><span data-stu-id="ffa80-114">Classes for Visual Basic 6.0 Users</span></span>](https://msdn.microsoft.com/library/d625222c-cd32-4c8d-b25c-ea71729b88b7)  
- [<span data-ttu-id="ffa80-115">생성자</span><span class="sxs-lookup"><span data-stu-id="ffa80-115">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a><span data-ttu-id="adc85-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="adc85-112">See Also</span></span>  
+ [<span data-ttu-id="adc85-113">Visual Basic의 Class_Initialize 변경</span><span class="sxs-lookup"><span data-stu-id="adc85-113">Class_Initialize Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/2cd023cf-2869-4836-b08d-43822294beeb)  
+ [<span data-ttu-id="adc85-114">Visual Basic 6.0 사용자를 위한 클래스</span><span class="sxs-lookup"><span data-stu-id="adc85-114">Classes for Visual Basic 6.0 Users</span></span>](https://msdn.microsoft.com/library/d625222c-cd32-4c8d-b25c-ea71729b88b7)  
+ [<span data-ttu-id="adc85-115">생성자</span><span class="sxs-lookup"><span data-stu-id="adc85-115">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
