--- a/docs/visual-basic/misc/bc30793.md
+++ b/docs/visual-basic/misc/bc30793.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30793
 ms.assetid: a38a1da9-4413-4a69-a2ce-0b6d51c2c4ef
-ms.openlocfilehash: 197ebeb9ce602e037baa5e4ed25c770977d1cc0d
-ms.sourcegitcommit: 3c1c3ba79895335ff3737934e39372555ca7d6d0
+ms.openlocfilehash: 47ed6fd686e699b8d0c171eabe3c7c548f82b7c2
+ms.sourcegitcommit: c7f3e2e9d6ead6cc3acd0d66b10a251d0c66e59d
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43776884"
+ms.lasthandoff: 09/09/2018
+ms.locfileid: "44227534"
 ---
 # <a name="39trycast39-operands-must-be-class-constrained-type-parameters-but-39lttypeparameternamegt39-has-no-class-constraint"></a>&#39;TryCast&#39; 피연산자에 있는 클래스 형식 매개 변수 여야 합니다. 하지만 &#39; &lt;typeparametername&gt; &#39; 클래스 제약 조건이 없는
 합니다 [TryCast 연산자](../../visual-basic/language-reference/operators/trycast-operator.md) 참조 형식이 되도록 보장 되지 않는 형식 매개 변수 피연산자와 연산자를 사용 합니다.  
@@ -25,7 +25,7 @@ ms.locfileid: "43776884"
   
 -   합니다 [새 운영자](../../visual-basic/language-reference/operators/new-operator.md) 제약 조건 (형식 인수에서 만드는 코드가 액세스할 수 있는 매개 변수가 없는 생성자를 노출 해야 및 하므로 클래스 여야 함)  
   
--   합니다 [클래스 (Visual Basic)](https://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7) 제약 조건 (형식 인수가 참조 형식 이어야 함)  
+-   합니다 [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) 제약 조건 (형식 인수가 참조 형식 이어야 함)  
   
  **오류 ID:** BC30793  
   
@@ -35,9 +35,10 @@ ms.locfileid: "43776884"
   
 -   형식 매개 변수가 참조 형식만 사용하도록 요구할 수 없는 경우에는 `TryCast`와 함께 사용할 수 없습니다. 대신 [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) 를 사용할 수 있습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
- [값 형식과 참조 형식](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
- [확대 변환과 축소 변환](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)  
- [암시적 변환과 명시적 변환](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+## <a name="see-also"></a>참고자료
+
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
+- [값 형식과 참조 형식](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
+- [확대 변환과 축소 변환](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)  
+- [암시적 변환과 명시적 변환](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
