--- a/docs/visual-basic/misc/bc32102.md
+++ b/docs/visual-basic/misc/bc32102.md
@@ -8,24 +8,24 @@ helpviewer_keywords:
 - BC32102
 ms.assetid: f4ebd416-7fb9-4a24-a8df-e9ee7ccc2c76
 ms.openlocfilehash: 0034f66ea22cb9bc140576528c6a26ae862cefe1
-ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
+ms.sourcegitcommit: c7f3e2e9d6ead6cc3acd0d66b10a251d0c66e59d
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/07/2018
-ms.locfileid: "44136305"
+ms.lasthandoff: 09/09/2018
+ms.locfileid: "44252566"
 ---
-# <a name="39structure39-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="78281-102">&#39;구조&#39; 동일한 형식 매개 변수는 제약 조건을 여러 번 지정할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="78281-102">&#39;Structure&#39; constraint cannot be specified multiple times for the same type parameter</span></span>
-<span data-ttu-id="78281-103">제약 조건 목록이 포함 된 [구조체 (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) 제약 조건이 두 번 이상.</span><span class="sxs-lookup"><span data-stu-id="78281-103">A constraint list includes the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint more than once.</span></span>  
+# <a name="39structure39-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="65d1b-102">&#39;구조&#39; 동일한 형식 매개 변수는 제약 조건을 여러 번 지정할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="65d1b-102">&#39;Structure&#39; constraint cannot be specified multiple times for the same type parameter</span></span>
+<span data-ttu-id="65d1b-103">제약 조건 목록이 포함 된 [구조체 (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) 제약 조건이 두 번 이상.</span><span class="sxs-lookup"><span data-stu-id="65d1b-103">A constraint list includes the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint more than once.</span></span>  
   
- <span data-ttu-id="78281-104">형식 매개 변수 제약 조건 목록은 해당 형식 매개 변수에 전달 된 형식 인수가 값 형식이 되도록 지정할 수 있습니다 (사용 하 여는 `Structure` 제약 조건) 또는 참조 형식 이어야 합니다 (사용 하 여 합니다 [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) 제약 조건).</span><span class="sxs-lookup"><span data-stu-id="78281-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint).</span></span> <span data-ttu-id="78281-105">동일한 형식 매개 변수에 제약 조건을 둘 다 지정할 수 없으며 두 번 이상 지정할 수도 없습니다.</span><span class="sxs-lookup"><span data-stu-id="78281-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="65d1b-104">형식 매개 변수 제약 조건 목록은 해당 형식 매개 변수에 전달 된 형식 인수가 값 형식이 되도록 지정할 수 있습니다 (사용 하 여는 `Structure` 제약 조건) 또는 참조 형식 이어야 합니다 (사용 하 여 합니다 [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) 제약 조건).</span><span class="sxs-lookup"><span data-stu-id="65d1b-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint).</span></span> <span data-ttu-id="65d1b-105">동일한 형식 매개 변수에 제약 조건을 둘 다 지정할 수 없으며 두 번 이상 지정할 수도 없습니다.</span><span class="sxs-lookup"><span data-stu-id="65d1b-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="78281-106">오류 ID: BC32102</span><span class="sxs-lookup"><span data-stu-id="78281-106">Error ID: BC32102</span></span>  
+ <span data-ttu-id="65d1b-106">오류 ID: BC32102</span><span class="sxs-lookup"><span data-stu-id="65d1b-106">Error ID: BC32102</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="78281-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="78281-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="65d1b-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="65d1b-107">To correct this error</span></span>  
   
--   <span data-ttu-id="78281-108">중복된 `Structure` 키워드를 모두 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="78281-108">Remove any redundant `Structure` keywords.</span></span> <span data-ttu-id="78281-109">제약 조건 목록에 하나만 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="78281-109">You should have only one in the constraint list.</span></span>  
+-   <span data-ttu-id="65d1b-108">중복된 `Structure` 키워드를 모두 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="65d1b-108">Remove any redundant `Structure` keywords.</span></span> <span data-ttu-id="65d1b-109">제약 조건 목록에 하나만 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="65d1b-109">You should have only one in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="78281-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="78281-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="65d1b-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="65d1b-110">See also</span></span>
 
-- [<span data-ttu-id="78281-111">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="78281-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="78281-112">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="78281-112">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="65d1b-111">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="65d1b-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [<span data-ttu-id="65d1b-112">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="65d1b-112">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
