--- a/docs/csharp/language-reference/compiler-messages/cs0120.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0120.md
@@ -6,34 +6,35 @@ f1_keywords:
 helpviewer_keywords:
 - CS0120
 ms.assetid: 3ff67f11-bdf9-436b-bc0c-4fa3cd1925a6
-ms.openlocfilehash: 39b322aaeaa18d9418147cf1579641c4d0d194b4
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 57f76f443d49a75ee756140fa509103c944ab31e
+ms.sourcegitcommit: 4b6490b2529707627ad77c3a43fbe64120397175
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33216124"
+ms.lasthandoff: 09/10/2018
+ms.locfileid: "44266763"
 ---
 # <a name="compiler-error-cs0120"></a>컴파일러 오류 CS0120
+
 비정적 필드, 메서드 또는 속성 ‘member’에 대한 개체 참조가 필요합니다.  
   
  비정적 필드, 메서드 또는 속성을 사용하려면 개체 인스턴스를 먼저 만들어야 합니다. 정적 메서드에 대한 자세한 내용은 [정적 클래스 및 정적 클래스 멤버](../../../csharp/programming-guide/classes-and-structs/static-classes-and-static-class-members.md)를 참조하세요. 클래스 인스턴스를 만드는 방법에 대한 자세한 내용은 [인스턴스 생성자](../../../csharp/programming-guide/classes-and-structs/instance-constructors.md)를 참조하세요.  
   
  다음 샘플에서는 CS0120을 생성합니다.  
-  
-```csharp  
+
+```csharp
 // CS0120_1.cs  
 public class MyClass  
 {  
    // Non-static field  
-   public int i;   
+   public int i;
    // Non-static method  
    public void f(){}  
    // Non-static property  
    int Prop  
    {  
-      get   
+      get
       {  
-         return 1;   
+         return 1;
       }  
    }  
   
@@ -49,11 +50,11 @@ public class MyClass
       // int p = mc.Prop;  
    }  
 }  
-```  
-  
+```
+
  다음과 같이 정적 메서드에서 비정적 메서드를 호출하는 경우에도 CS0120이 생성됩니다.  
-  
-```csharp  
+
+```csharp
 // CS0120_2.cs  
 // CS0120 expected  
 using System;  
@@ -74,11 +75,11 @@ public class MyClass
    {  
    }  
 }  
-```  
-  
+```
+
  마찬가지로, 다음과 같이 명시적으로 클래스 인스턴스를 제공하지 않으면 정적 메서드는 인스턴스 메서드를 호출할 수 없습니다.  
-  
-```csharp  
+
+```csharp
 // CS0120_3.cs  
 using System;  
   
@@ -96,7 +97,8 @@ public class MyClass
       Console.WriteLine(sText);  
    }  
 }  
-```  
-  
-## <a name="see-also"></a>참고 항목  
- [클래스 및 구조체](../../../csharp/programming-guide/classes-and-structs/index.md)
+```
+
+## <a name="see-also"></a>참고 항목
+
+- [클래스 및 구조체](../../../csharp/programming-guide/classes-and-structs/index.md)
