--- a/docs/csharp/language-reference/compiler-messages/cs1926.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1926.md
@@ -6,32 +6,34 @@ f1_keywords:
 helpviewer_keywords:
 - CS1926
 ms.assetid: 58cc8385-8d92-4cee-8941-d05e128e3674
-ms.openlocfilehash: 649b5b976a0e8e8d0868d9a13fd5e14de4efe312
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: a3becf71ab963921bc67759667657854a3dbe0f2
+ms.sourcegitcommit: c7f3e2e9d6ead6cc3acd0d66b10a251d0c66e59d
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33213937"
+ms.lasthandoff: 09/09/2018
+ms.locfileid: "44227313"
 ---
 # <a name="compiler-error-cs1926"></a>컴파일러 오류 CS1926
+
 ‘filename’ Win32 매니페스트 파일을 읽는 동안 오류가 발생했습니다. ‘error’  
   
  이 오류는 다음 조건에 해당할 때 발생합니다.  
   
-1.  명령줄을 이용하거나 **솔루션 탐색기**에서 **프로젝트** 아이콘을 마우스 오른쪽 단추로 클릭하고 **추가**, **새 항목**, **응용 프로그램 매니페스트 파일**을 차례로 클릭하여 **/win32manifest** 옵션을 지정합니다.  
+1. 명령줄을 이용하거나 **솔루션 탐색기**에서 **프로젝트** 아이콘을 마우스 오른쪽 단추로 클릭하고 **추가**, **새 항목**, **응용 프로그램 매니페스트 파일**을 차례로 클릭하여 **/win32manifest** 옵션을 지정합니다.  
   
-2.  파일이 손상되었거나 누락되었습니다.  
+2. 파일이 손상되었거나 누락되었습니다.  
   
 ## <a name="to-correct-this-error"></a>이 오류를 해결하려면  
   
-1.  옵션을 제거합니다.  
+1. 옵션을 제거합니다.  
   
-2.  파일을 대체, 복구 또는 다시 생성합니다.  
+2. 파일을 대체, 복구 또는 다시 생성합니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예
+
  다음 예제에서는 손상되었거나 누락된 win32 매니페스트 파일을 이용하여 컴파일할 때 CS1926 오류가 발생합니다.  
-  
-```csharp  
+
+```csharp
 // cs1926.cs  
 // Compile with: /win32manifest: ../../app.manifest  
 // CS1926  
@@ -41,8 +43,9 @@ class Test
     {  
         return 1;  
     }  
-}   
-```  
-  
+}
+```
+
 ## <a name="see-also"></a>참고 항목  
- [/win32manifest(C# 컴파일러 옵션)](../../../csharp/language-reference/compiler-options/win32manifest-compiler-option.md)
+
+- [/win32manifest(C# 컴파일러 옵션)](../../../csharp/language-reference/compiler-options/win32manifest-compiler-option.md)
